implementado cache e fluxo de login e criacao de usuario